2006-11-18  Djihed Afifi  <djihed@gmail.com>

	* configure.in: Added Arabic.

2006-11-12 Kurt Maute <Kurt@Maute.us>
	* src/planner-gantt-row.c: fix for bug 358415 crash in gantt view,
	contributed by Arthur Petitpierre and mdpoole trolius org.

2006-09-24 Kurt Maute <Kurt@Maute.us>
	* configure.in:  Version 0.14.1

2006-09-23 Kurt Maute <Kurt@Maute.us>
	* data/planner.1:  man page contributed by Martin-Eric Racine
	* data/Makefile.am:  for man page contributed by Martin-Eric Racine
	* configure.in: fix for bug #353213 contrubuted by Dennis Lubert
	* libplanner/mrp-sql.c: fix for bug #353213 contrubuted by Dennis Lubert
	* src/planner-sql-plugin.c: fix for bug #353213 contrubuted by Dennis Lubert

2006-09-13  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added dz in ALL_LINGUAS

2006-07-08 Kurt Maute <Kurt@Maute.us>
	* docs/user-guide/es/planner.xml:  add encoding to header, correct <mediaobject> tags
	* docs/user-guide/eu/planner.xml:  convert from dos to unix format
	* src/planner-format.c:  fix NULL pointer deref - bug #334121
	* src/planner-gantt-row.c:  patch to fix segv on scrolling - bug #345517

2006-06-20 Kurt Maute <Kurt@Maute.us>
	* docs/user-guide/eu/planner.xml:  Correct validation errors
	* po/POTFILES.in:  Added missing files per bug #344793
	* README: Put some better, more current info in there
	* NEWS:  Updates since v0.13

2006-06-11 Kurt Maute <Kurt@Maute.us>
	* configure.in:  Version 0.14
	* po/POTFILES.in: Removed referece to planner.keys.in
	* python/Makefile.am: Correct error when builddir != srcdir
	* src/planner-window.c: Change planner homepage in about box to live.gnome.org/Planner

	Correct distcheck errors and cut v0.14

2006-05-23 Kurt Maute <Kurt@Maute.us>
	* src/planner-window.c

	Updated About box info:  Added self as maintainer, removed Imendio from name.

2006-05-23 Kurt Maute <Kurt@Maute.us>
	* docs/user-guide/C/planner.xml

	Updated user guide

2006-05-23 Kurt Maute <Kurt@Maute.us>
	* data/ui/gantt-view.ui