@@ -27,7 +27,7 @@ AC_DEFUN([PLANNER_COMPILE_WARNINGS],[
     maximum|error)
 	warning_flags="-Wall -Wunused -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith"
 	CFLAGS="$warning_flags $CFLAGS"
-	for option in -Wno-sign-compare -Wno-pointer-sign; do
+	for option in -Wno-sign-compare -Wno-pointer-sign -Wno-return-type; do
 		SAVE_CFLAGS="$CFLAGS"
 		CFLAGS="$CFLAGS $option"
 		AC_MSG_CHECKING([whether gcc understands $option])
